# mcpc

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/generators/: mod.rs  python.rs  typescript.rs
src/utils/: dependency_checker.rs  mod.rs
