[package]
name = "mcpc"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server project generator"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/mcpc"
keywords = ["cli", "generator", "mcp", "template", "scaffold"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tera = "1.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
which = "5.0"
tempfile = "3.8"
indicatif = "0.17"
colored = "2.0"
fs_extra = "1.3"
